--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,24 +3,19 @@ project(digital-signature)
 
 set(CMAKE_CXX_STANDARD 17)
 
-file(GLOB HEADER_DIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} */)
-foreach(HEADER_DIR ${HEADER_DIRS})
-    file(GLOB_RECURSE HEADERS ${HEADER_DIR}/*.h)
-    if(HEADERS)
-        include_directories(${HEADER_DIR})
-    endif()
-endforeach()
+include_directories(./)
 
 
 add_executable(
         ${PROJECT_NAME}
         main.cpp
         io-tools/io_tools.cpp
-        cryptographic-hash/cryptographic_hash.cpp
-        cryptographic-provider/cryptographic_provider.cpp
+        cryptographic/hash/hash.cpp
+        cryptographic/provider/provider.cpp
         file-hash-calculator/file_hash_calculator.cpp
         file-hash-calculator/file_hash_calculator.h
         file-hash-calculator/file_hash_calculator.cpp
         io-tools/io_tools.cpp
         io-tools/io_tools.h
+        cryptographic/cryptographic.h
 )
